# typingmaniac-ts

./: .gitattributes  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  go.mod  index.html  main.go  package-lock.json  package.json
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
cmake_modules/: FindSFML.cmake
docs/: DESIGN.md
src/: GameConfig.h  main.cpp  main.ts
src/StateManager/: State.h  StateMachine.cpp  StateMachine.h
src/States/: CourseClearedState.cpp  CourseClearedState.h  GameMenuState.cpp  GameMenuState.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  PauseMenuState.cpp  PauseMenuState.h
src/config/: constants.ts  gameConfig.json
src/data/: words.json
src/managers/: EffectManager.ts
src/scenes/: AuthScene.ts  CountdownScene.ts  GameScene.ts  MenuScene.ts  SettingsScene.ts  UIScene.ts
src/services/: AudioService.ts  AuthService.ts  BackgroundRenderer.ts  GameConfigService.ts  StorageService.ts  ThemeService.ts  WizardRenderer.ts  WordService.ts
src/themes/: alchemist.ts  default.ts  index.ts  types.ts
src/ui/: ProgressBar.ts
tasks/: lessons.md  theme-refactor.md  todo.md
web/: index.html
